--- a/templates/intern.html
+++ b/templates/intern.html
@@ -1,5 +1,6 @@
-<div class="card employee-card">
-    <div class="card-header">
+<div class="col">
+<div class="card employee-card m-5 border-warning">
+    <div class="card-header bg-warning text-light">
         <h2 class="card-title">{{ name }}</h2>
         <h3 class="card-title"><i class="fas fa-user-graduate mr-2"></i>{{ role }}</h3>
     </div>
@@ -10,4 +11,5 @@
             <li class="list-group-item">School: {{ school }}</li>
         </ul>
     </div>
+</div>
 </div>
