--- a/templates/manager.html
+++ b/templates/manager.html
@@ -1,5 +1,6 @@
-<div class="card employee-card">
-    <div class="card-header">
+<div class="col">
+<div class="card employee-card m-5 border-primary">
+    <div class="card-header bg-primary text-light">
         <h2 class="card-title">{{ name }}</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>{{ role }}</h3>
     </div>
@@ -10,4 +11,5 @@
             <li class="list-group-item">Office number: {{ officeNumber }}</li>
         </ul>
     </div>
+</div>
 </div>
